# brazilcep

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  correios_cep.py  correios_cep_exceptions.py  correios_cep_test.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: coverage.yml  coveralls.yml  flake8.yml  lint.yml  publish-package.yml  release.yml  test-package.yml  test.yml
brazilcep/: __init__.py  apicep.py  client.py  correios.py  exceptions.py  opencep.py  utils.py  version.py  viacep.py
docs/: CHANGELOG.md  CONTRIBUTING.md  Makefile  conf.py  contributing.rst  history.rst  index.html  index.md  index.rst  install.md  installation.rst  make.bat  migrate.md  modules.rst  pycep_correios.rst  readme.rst  tutorial.md  usage.rst
docs.bkp/: CHANGELOG.md  CONTRIBUTING.md
docs/_build_html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  readme.html  search.html  searchindex.js  usage.html
docs/_build_html/.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build_html/_sources/: index.rst.txt  index.txt  installation.rst.txt  installation.txt  usage.rst.txt  usage.txt
docs/_build_html/_static/: alabaster.css
docs/en-US/: AUTHORS.rst  CONTRIBUTING.rst  README.rst  index.rst  installation.rst  usage.rst
docs/locale/en/: README.rst
docs/locale/en/LC_MESSAGES/: authors.po  contributing.po  history.po  index.po  installation.po  modules.po  pycep_correios.po  usage.po
docs/pt-BR/: README.md
docs/source/: api.rst  conf.py  index.md  index.rst  install.md
docs/source/_templates/: hacks.html  sidebar-intro.html  sidebar-links.html  sidebarintro.html  sidebarlogo.html
docs/source/dev/: contributing.rst
docs/source/user/: install.rst  quickstart.rst
docs/static/: logo.xcf
pycep_correios/: __init__.py  __version__.py  api.py  apicep.py  client.py  cliente.py  correios.py  correios_exceptions.py  excecoes.py  exceptions.py  parser.py  pycep_correios.py  pycep_correios_exceptions.py  viacep.py
pycep_correios/templates/: consultacep_xml.xml
test/: __init__.py  correios_test.py  pycep_correios_test.py  test_correios.py
test/templates/: response.xml  response_error.xml
tests/: test_api.py  test_apicep.py  test_client.py  test_cliente.py  test_correios.py  test_format_cep.py  test_get_address_from_cep.py  test_get_cep_from_address.py  test_opencep.py  test_parser.py  test_pycep_correios.py  test_utils.py  test_validate_cep.py  test_viacep.py
tests/templates/: consultacep.xml  resposta.xml
